--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cypress": "^8.4.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.1"
   },
